# market-rl-env

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  blog.md  dashboard.py  milestone.md  openenv.yaml  planning.md  pyproject.toml
.claude/: settings.json
assets/results/: behavioral_adaptation.json  checkpoint_comparison.json  evaluation_stage1.json  evaluation_table.md  hidden_state_probes.json  price_efficiency.json
client/: __init__.py  client.py
examples/: run_episode.py
market_env/: bots.py  environment.py  models.py  order_book.py  reward.py  scenario.py  server.py
notebooks/: _build_notebook.py  train_colab.ipynb
tests/: test_bots.py  test_environment.py  test_integration.py  test_models.py  test_order_book.py  test_reward.py  test_scenario.py  test_server.py
training/: README.md  evaluate.py  tom_probes.py
training/runs/stage1_2026-04-25/: training_log.json
