[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-rl-env"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.12.5",
    "fastapi==0.136.1",
    "uvicorn[standard]==0.43.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["market_env*", "client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
