[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-rl-env"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.12.5",
    "fastapi==0.136.1",
    "uvicorn[standard]==0.43.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]
# Pulled in only by the Colab training notebook and `training/generate_sft_data.py`.
# Kept out of the runtime install so the HF Space image stays slim.
# Versions are floors, not pins — Colab re-pins these on its own.
training = [
    "unsloth>=2024.10",
    "trl>=0.13.0",
    "peft>=0.13.0",
    "datasets>=3.0",
    "wandb>=0.18",
    "matplotlib>=3.9",
    "nbformat>=5.10",
]
dashboard = [
    "streamlit>=1.38",
    "plotly>=5.24",
    "pandas>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["market_env*", "client*", "training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
